2.1.0 (TBD)

- The --cloudconfig option of the request command of the orders CLI has been
  superseded by a new --delivery option, with --cloudconfig left as an alias.
  New --archive-type, --archive-filename, and --single-archive options to
  control the zip archiving of order outputs without any cloud storage delivery
  have also been added (#990).

2.1b1 (2023-07-11)

Added:
- The request command of the subscriptions CLI has a new --clip-to-source
  option (#988).
- A new request-pv command has been added to the subscriptions CLi (#988).
- Support for catalog source publishing stages (#977) and time range types
  (#978) have been added to subscription_request.catalog_source.
- Add the option to get Planetary Variable subscription results as a CSV file
  (#981).
- A subscription_request.planetary_variable_source function has been added
  (#976).
- The subscription_request.build_request function has a new option to clip to
  the subscription's source geometry. This is a preview of the default behavior
  of the next version of the Subscriptions API (#971).

2.0.3 (2023-06-28)

Changed:
- Orders CLI now forces STAC to false for GEE deliveries. This is due to the
  Orders API change to surface validation errors when stac is specified for GEE
  orders.(#957)


2.0.2 (2023-05-24)

Fixed:
- Fixed bug where SkySatVideo was not recognized as a valid data api item type.
- Fixed wheel name to indicate that only python 3 is supported and updated
  build metadata to indicate that the package is now a stable release and only
  supports Python 3.


2.0.1 (2023-05-10)

Fixed:
- Fix security issue where secret file was being created with read access other
  users on the machine. Automatically fixes the file permissions to only read
  and write the first time the file is accessed and continues to enforce the
  proper file permissions going forward.

Docs:
- Fixed broken links on "CLI for Data API Tutorial" page (#952).